--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -32,6 +32,7 @@ group :jekyll_plugins do
   gem "jemoji"
   gem "jekyll-include-cache"
   gem "jekyll-algolia"
+  gem "minimal-mistakes-jekyll"
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
