--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,13 +1,11 @@
 # main links
 main:
-  - title: "Infos"
+  - title: "Contents"
     url: /units.html
-  - title: "Site home"
-    url: /index.html
+  - title: "Lab home"
+    url: https://www.uni-marburg.de/en/fb19/disciplines/physisch/ecoinformatics
   - title: "OER home"
     url: https://oer.uni-marburg.de/ilias.php?ref_id=1651239&cmd=frameset&cmdClass=ilrepositorygui&cmdNode=tp&baseClass=ilrepositorygui
-  - title: "Sitemap"
-    url: /sitemap.html
   - title: "About"
     url: /about.html
     
@@ -15,9 +13,9 @@ main:
 docs:
   - title: Ways out
     children:
-      - title: "Infos"
+      - title: "Contents"
         url: /units.html
-      - title: "Site home"
-        url: /index.html
+      - title: "Lab home"
+        url: https://www.uni-marburg.de/en/fb19/disciplines/physisch/ecoinformatics
       - title: "OER home"
         url: https://oer.uni-marburg.de/ilias.php?ref_id=1651239&cmd=frameset&cmdClass=ilrepositorygui&cmdNode=tp&baseClass=ilrepositorygui
