--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -5,7 +5,7 @@ zeuss:
   avatar           : "/assets/images/instructors/zeuss.jpg"
   email            : "dirk.zeuss@uni-marburg.de"
 reudenbach:
-  name             : "Chris Reudenbach"
+  name             : "Christoph Reudenbach"
   avatar           : "/assets/images/instructors/reudenbach.jpg"
   email            : "reudenbach@uni-marburg.de"  
 nauss:
