--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -156,5 +156,14 @@ plugins:
 
 github: [metadata]
 
+# Maybe some comment functionality some day like (does not work yet)
+#comments:
+#  provider: "facebook"
+#  facebook:
+#    appid: # optional
+#    num_posts: # 5 (default)
+#    colorscheme: # "light" (default), "dark"
+
+
 
 
