--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,13 +1,15 @@
 # main links
 main:
-  - title: "Courses"
+  - title: "Courses sub"
     url: /01_courses/01_overview.html
+  - title: "Courses all"
+    url: /courses.html 
   - title: "Lab Home"
     url: https://www.uni-marburg.de/en/fb19/disciplines/physisch/environmentalinformatics
   - title: "OER Home"
     url: https://oer.uni-marburg.de/goto.php?target=cat_1651239&client_id=UNIMR
-  - title: "Spotlights"
-    url: /spotlights.html
+#  - title: "Spotlights" Some day, collect from here: https://geomoer.github.io/moer-base-r/unit99/sl01_Intro.html
+#    url: /spotlights.html
   - title: "About"
     url: /about.html    
   - title: "Sitemap"
