--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ baseurl: "/moer-info-page"
 
 
 ##### Title ###################################################################
-title: Teaching
+title: Courses
 name: &name "Lab of Environmental Informatics" # &name is a YAML anchor which can be *referenced later
 email: dirk.zeuss@uni-marburg.de
 description: >- # this means to ignore newlines until next item
