--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -41,3 +41,12 @@ gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "wdm", "~> 0.1.0" if Gem.win_platform?
 
 
+
+gem "webrick", "~> 1.8"
+
+gem "faraday", "~> 2.9"
+
+gem "faraday-retry", "~> 2.2"
+
+gem 'rack', '~> 2.2' 
+
